--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.2.1",
     "sanity": "^3.52.4",
     "stripe": "^16.6.0",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
