--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^6.21.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.52.4",
+    "@stripe/stripe-js": "^4.1.0",
     "canvas-confetti": "^1.9.3",
     "next": "14.2.5",
     "next-sanity": "^9.4.3",
